--- a/meta/github-release-downloads-weekly.json
+++ b/meta/github-release-downloads-weekly.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": 1,
-  "label": "downloads (7d)",
+  "label": "Downloads (7d)",
   "message": "32",
-  "color": "blue"
+  "color": "#a855f7"
 }
